@@ -1,9 +1,10 @@
 package pl.akmf.ksef.sdk.api;
 
 import org.apache.commons.lang3.StringUtils;
+import pl.akmf.ksef.sdk.api.http.HttpHeadersWrapper;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
@@ -30,9 +31,13 @@ public class HttpUtils {
                     url.append("&");
                 }
 
-                url.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8));
-                url.append("=");
-                url.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
+                try {
+                    url.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8.name()));
+                    url.append("=");
+                    url.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8.name()));
+                } catch (UnsupportedEncodingException e) {
+                    throw new RuntimeException(e); // UTF-8 should always be supported
+                }
                 first = false;
 
             }
@@ -56,9 +61,13 @@ public class HttpUtils {
                     url.append("&");
                 }
 
-                url.append(URLEncoder.encode(keyValue.getKey(), StandardCharsets.UTF_8));
-                url.append("=");
-                url.append(URLEncoder.encode(keyValue.getValue(), StandardCharsets.UTF_8));
+                try {
+                    url.append(URLEncoder.encode(keyValue.getKey(), StandardCharsets.UTF_8.name()));
+                    url.append("=");
+                    url.append(URLEncoder.encode(keyValue.getValue(), StandardCharsets.UTF_8.name()));
+                } catch (UnsupportedEncodingException e) {
+                    throw new RuntimeException(e); // UTF-8 should always be supported
+                }
                 first = false;
 
             }
@@ -66,9 +75,9 @@ public class HttpUtils {
         return url.toString();
     }
 
-    public static boolean isValidResponse(HttpResponse<byte[]> response,
+    public static boolean isValidResponse(int statusCode,
                                           HttpStatus expectedStatus) {
-        return expectedStatus.getCode() == response.statusCode();
+        return expectedStatus.getCode() == statusCode;
     }
 
     public static String formatExceptionMessage(String operationId, int statusCode, byte[] body) {
